# openclaw-shitposting

./: .gitignore  LICENSE  README.md  SKILL.md  index.js  package-lock.json  package.json  pyproject.toml  requirements.txt  shit_finder.py
config/: config.json  filters.json  sources.json
scripts/: __init__.py  content_judge.py  logger.py  main.py  pipeline.mjs  reddit_fetcher.py  run.py  telegram_push.py  trigger.mjs
src/: __init__.py  cli.ts  content_judge.py  curator.ts  index.ts  logger.py  main.py  reddit_fetcher.py  telegram_push.py
src/judge/: history.ts  index.ts  scorer.ts
src/mock/: data.ts  index.ts  reddit-client.ts  telegram-client.ts
src/pipeline/: fetcher.ts  runner.ts  sender.ts
src/reddit/: client.ts  fetcher.ts  index.ts
src/telegram/: client.ts  index.ts
src/types/: index.ts
src/utils/: config.ts  content-fetcher.ts  logger.ts  skill-checker.ts
tests/: config.test.ts  content-fetcher.test.ts  history.test.ts  judge.test.ts  scorer.test.ts  skill-checker.test.ts  test_content_judge.py  test_integration.py  test_reddit_fetcher.py
